src/objects/ProjectCountry_Risk__c.object
<CustomObject>
    <fields>
        <fullName>BusinessRisk__c</fullName>
        <formula>CountryRisk__r.BusinessRisk__c</formula>
        <label>Business  Risk</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_in_Risk__c</fullName>
        <formula>ABS(Safety_Rating__c -  Last_Country_Risk__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change in Risk</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConsiderForBatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ConsiderForBatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CountryName__c</fullName>
        <formula>CountryRisk__r.Name</formula>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryRisk__c</fullName>
        <label>Country Risk</label>
        <referenceTo>CountryRisk__c</referenceTo>
        <relationshipLabel>Country Risks</relationshipLabel>
        <relationshipName>CountryRisks</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DetentionDiscrimination__c</fullName>
        <formula>CountryRisk__r.DetentionDiscrimination__c</formula>
        <label>Detention &amp; Discrimination</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KidnapRansom__c</fullName>
        <formula>CountryRisk__r.KidnapRansom__c</formula>
        <label>Kidnap &amp; Ransom</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Country_Risk__c</fullName>
        <label>Last Country Risk</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Project Country Risks</relationshipLabel>
        <relationshipName>ProjectCountryRisks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <formula>CountryRisk__r.Property__c</formula>
        <label>Property</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SafetyRatingForRollup__c</fullName>
        <description>This field is set via workflow. It is needed to perform a roll-up summary on the project record to calculate the overall risk level</description>
        <label>Safety Rating for Roll-up</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Safety_Rating__c</fullName>
        <formula>CountryRisk__r.SafetyRating__c</formula>
        <label>Safety Rating</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Country Risk</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PCR-{00000000}</displayFormat>
        <label>Project Country Risk Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Country Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>